--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,8 @@
 
           <ul class="card-portfolio-list">
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img1.jpg"
@@ -90,11 +90,11 @@
                   <h3 class="portfolio-title">Технокряк</h3>
                   <p class="portfolio-description">Веб-сайт</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img2.jpg"
@@ -109,11 +109,11 @@
                   </h3>
                   <p class="portfolio-description">Дизайн</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img3.jpg"
@@ -126,11 +126,11 @@
                   <h3 class="portfolio-title">Ресторан Seafood</h3>
                   <p class="portfolio-description">Приложение</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img4.jpg"
@@ -143,11 +143,11 @@
                   <h3 class="portfolio-title">Проект Prime</h3>
                   <p class="portfolio-description">Маркетинг</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img5.jpg"
@@ -160,11 +160,11 @@
                   <h3 class="portfolio-title">Проект Boxes</h3>
                   <p class="portfolio-description">Приложение</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img6.jpg"
@@ -177,11 +177,11 @@
                   <h3 class="portfolio-title">Inspiration has no Borders</h3>
                   <p class="portfolio-description">Веб-сайт</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img7.jpg"
@@ -194,11 +194,11 @@
                   <h3 class="portfolio-title">Издание Limited Edition</h3>
                   <p class="portfolio-description">Дизайн</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img8.jpg"
@@ -211,11 +211,11 @@
                   <h3 class="portfolio-title">Проект LAB</h3>
                   <p class="portfolio-description">Маркетинг</p>
                 </div>
-              </a>
+              </article>
             </li>
             <li class="card-portfolio-item">
-              <a href="" class="section-link">
-                <div class="portfolio-box">
+              <article class="card">
+                <div class="portfolio-thumb">
                   <img
                     class="portfolio-list-img"
                     src="./imajes/portfolio/img9.jpg"
@@ -228,7 +228,7 @@
                   <h3 class="portfolio-title">Growing Business</h3>
                   <p class="portfolio-description">Приложение</p>
                 </div>
-              </a>
+              </article>
             </li>
           </ul>
         </div>
