--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <li class="about-item">
               <img
                 class="about-img"
-                src="./imajes/job1.jpg"
+                src="./imajes/about/job1.jpg"
                 width="370"
                 height="294"
                 alt="Работает на компе"
@@ -117,7 +117,7 @@
             <li class="about-item">
               <img
                 class="about-img"
-                src="./imajes/job2.jpg"
+                src="./imajes/about/job2.jpg"
                 width="370"
                 height="294"
                 alt="Работает в телефоне"
@@ -126,7 +126,7 @@
             <li class="about-item">
               <img
                 class="about-img"
-                src="./imajes/job3.jpg"
+                src="./imajes/about/job3.jpg"
                 width="370"
                 height="294"
                 alt="Работает на планшете"
@@ -146,7 +146,7 @@
               <a class="section-link">
                 <img
                   class="team-img"
-                  src="./imajes/worker1.jpg"
+                  src="./imajes/team/worker1.jpg"
                   width="270"
                   height="260"
                   alt="Дизайнер продукта"
@@ -159,7 +159,7 @@
               <a class="section-link">
                 <img
                   class="team-img"
-                  src="./imajes/worker2.jpg"
+                  src="./imajes/team/worker2.jpg"
                   width="270"
                   height="260"
                   alt="Разработчик"
@@ -172,7 +172,7 @@
               <a class="section-link">
                 <img
                   class="team-img"
-                  src="./imajes/worker3.jpg"
+                  src="./imajes/team/worker3.jpg"
                   width="270"
                   height="260"
                   alt="Маркетолог"
@@ -185,7 +185,7 @@
               <a class="section-link">
                 <img
                   class="team-img"
-                  src="./imajes/worker4.jpg"
+                  src="./imajes/team/worker4.jpg"
                   width="270"
                   height="260"
                   alt="UI Дизайнер"
