--- a/index.html
+++ b/index.html
@@ -197,6 +197,58 @@
           </ul>
         </div>
       </section>
+
+      <!--OUR CLIENTS-->
+
+      <section class="clients-section">
+        <div class="container">
+          <h2 class="title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <a href="./" class="clients-link">
+                <svg class="icon" width="45" height="50">
+                  <use href="./imajes/sprite.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link">
+                <svg class="icon" width="40" height="52">
+                  <use href="./imajes/sprite.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link">
+                <svg class="icon" width="41" height="43">
+                  <use href="./imajes/sprite.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link">
+                <svg class="icon" width="80" height="43">
+                  <use href="./imajes/sprite.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link">
+                <svg class="icon" width="59" height="47">
+                  <use href="./imajes/sprite.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="./" class="clients-link">
+                <svg class="icon" width="89" height="46">
+                  <use href="./imajes/sprite.svg#icon-logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!--FOOTER-->
