--- a/index.html
+++ b/index.html
@@ -143,56 +143,184 @@
           <h2 class="title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <a class="section-link">
-                <img
-                  class="team-img"
-                  src="./imajes/team/worker1.jpg"
-                  width="270"
-                  height="260"
-                  alt="Дизайнер продукта"
-                />
+              <img
+                class="team-img"
+                src="./imajes/team/worker1.jpg"
+                width="270"
+                height="260"
+                alt="Дизайнер продукта"
+              />
+              <div class="team-list-content-wrapper">
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p class="team-description" lang="en">Product Designer</p>
-              </a>
+
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
+
             <li class="team-item">
-              <a class="section-link">
-                <img
-                  class="team-img"
-                  src="./imajes/team/worker2.jpg"
-                  width="270"
-                  height="260"
-                  alt="Разработчик"
-                />
+              <img
+                class="team-img"
+                src="./imajes/team/worker2.jpg"
+                width="270"
+                height="260"
+                alt="Разработчик"
+              />
+              <div class="team-list-content-wrapper">
                 <h3 class="team-title">Ольга Репина</h3>
                 <p class="team-description" lang="en">Frontend Developer</p>
-              </a>
+
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
-              <a class="section-link">
-                <img
-                  class="team-img"
-                  src="./imajes/team/worker3.jpg"
-                  width="270"
-                  height="260"
-                  alt="Маркетолог"
-                />
+              <img
+                class="team-img"
+                src="./imajes/team/worker3.jpg"
+                width="270"
+                height="260"
+                alt="Маркетолог"
+              />
+              <div class="team-list-content-wrapper">
                 <h3 class="team-title">Николай Тарасов</h3>
                 <p class="team-description" lang="en">Marketing</p>
-              </a>
+
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-item">
-              <a class="section-link">
-                <img
-                  class="team-img"
-                  src="./imajes/team/worker4.jpg"
-                  width="270"
-                  height="260"
-                  alt="UI Дизайнер"
-                />
+              <img
+                class="team-img"
+                src="./imajes/team/worker4.jpg"
+                width="270"
+                height="260"
+                alt="UI Дизайнер"
+              />
+              <div class="team-list-content-wrapper">
                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p class="team-description" lang="en">UI Designer</p>
-              </a>
+
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon">
+                        <use href="./imajes/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
