--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@
 
     <!--HERO-->
     <main>
-      <div class="container">
-        <section class="hero">
+      <div class="hero">
+        <div class="hero-content">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <div class="cursor">
             <button class="modal-btn" type="button">Заказать услугу</button>
           </div>
-        </section>
       </div>
 
       <!--FEATURES-->
