--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
     <!--FOOTER-->
 
     <footer class="footer">
-      <section class="footer-section">
         <div class="container-footer">
+          <div class="footer-list-left-side">
           <ul class="footer-list">
             <li class="footer-item">
               <a class="footer-logotipe-link" href="./index.html"
@@ -414,7 +414,42 @@
             </address>
           </div>
         </div>
-      </section>
+
+          <div class="footer-list-right-side">
+          <h3 class="footer-title">присоединяйтесь</h3>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      
+        </div>
     </footer>
   </body>
 </html>
