--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
         <div class="container">
           <!--<h2>Особенности</h2>-->
           <ul class="features-list">
-            <li class="features-item">
+            <li class="item icon-antenna">
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="description">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="features-item">
+            <li class="item icon-clock">
               <h3 class="features-title">Пунктуальность</h3>
               <p class="description">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="features-item">
+            <li class="item icon-diagram">
               <h3 class="features-title">Планирование</h3>
               <p class="description">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="features-item">
+            <li class="item icon-astronaut">
               <h3 class="features-title">Современные технологии</h3>
               <p class="description">
                 Значимость этих проблем настолько очевидна, что реализация
