--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
             >
           </li>
           <li class="auth-list-item">
-            <a class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="tel-link" href="tel:+380961111111"
+              ><svg class="auth-list-icon">
+                <use href="./imajes/sprite.svg#icon-phone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -55,8 +59,8 @@
       <div class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="modal-btn" type="button">Заказать услугу</button>
-          </div>
+          <button class="modal-btn" type="button">Заказать услугу</button>
+        </div>
       </div>
 
       <!--FEATURES-->
@@ -380,8 +384,8 @@
     <!--FOOTER-->
 
     <footer class="footer">
-        <div class="container-footer">
-          <div class="footer-list-left-side">
+      <div class="container-footer">
+        <div class="footer-list-left-side">
           <ul class="footer-list">
             <li class="footer-item">
               <a class="footer-logotipe-link" href="./index.html"
@@ -415,7 +419,7 @@
           </div>
         </div>
 
-          <div class="footer-list-right-side">
+        <div class="footer-list-right-side">
           <h3 class="footer-title">присоединяйтесь</h3>
           <ul class="social-list">
             <li class="social-list-item">
@@ -448,8 +452,7 @@
             </li>
           </ul>
         </div>
-      
-        </div>
+      </div>
     </footer>
   </body>
 </html>
