--- a/index.html
+++ b/index.html
@@ -37,18 +37,23 @@
             </li>
           </ul>
         </nav>
+
         <ul class="auth-navigation-list">
           <li class="auth-list-item">
             <a class="mailto-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              ><svg class="mail-list-icon">
+                <use href="./imajes/sprite.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="auth-list-item">
             <a class="tel-link" href="tel:+380961111111"
-              ><svg class="auth-list-icon">
-                <use href="./imajes/sprite.svg#icon-phone"></use></svg
-              >+38 096 111 11 11</a
-            >
+              ><svg class="phone-list-icon">
+                <use href="./imajes/sprite.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
