--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,19 @@
         <ul class="auth-navigation-list">
           <li class="auth-list-item">
             <a class="mailto-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              ><svg class="mail-list-icon">
+                <use href="./imajes/sprite.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="auth-list-item">
-            <a class="tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="tel-link" href="tel:+380961111111"
+              ><svg class="phone-list-icon">
+                <use href="./imajes/sprite.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -238,8 +246,8 @@
     <!--FOOTER-->
 
     <footer class="footer">
-      <section class="footer-section">
-        <div class="container-footer">
+      <div class="container-footer">
+        <div class="footer-list-left-side">
           <ul class="footer-list">
             <li class="footer-item">
               <a class="footer-logotipe-link" href="./index.html"
@@ -272,7 +280,41 @@
             </address>
           </div>
         </div>
-      </section>
+
+        <div class="footer-list-right-side">
+          <h3 class="footer-title">присоединяйтесь</h3>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-footer-link">
+                <svg class="footer-list-icon">
+                  <use href="./imajes/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
