--- a/portfolio.html
+++ b/portfolio.html
@@ -82,8 +82,8 @@
             </li>
           </ul>
 
-          <ul class="card-portfolio-list">
-            <li class="card-portfolio-item">
+          <ul class="card portfolio-list">
+            <li class="card portfolio-item">
               <article class="card">
                 <div class="portfolio-thumb">
                   <img
