--- a/portfolio.html
+++ b/portfolio.html
@@ -82,161 +82,152 @@
             </li>
           </ul>
 
-          <ul class="card portfolio-list">
+          <ul class="list portfolio-box">
             <li class="card portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img1.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img1.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Технокряк</h3>
                   <p class="portfolio-description">Веб-сайт</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img2.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img2.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">
                     Постер New Orlean vs Golden Star
                   </h3>
                   <p class="portfolio-description">Дизайн</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img3.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img3.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Ресторан Seafood</h3>
                   <p class="portfolio-description">Приложение</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img4.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img4.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Проект Prime</h3>
                   <p class="portfolio-description">Маркетинг</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img5.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img5.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Проект Boxes</h3>
                   <p class="portfolio-description">Приложение</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img6.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img6.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Inspiration has no Borders</h3>
                   <p class="portfolio-description">Веб-сайт</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img7.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img7.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Издание Limited Edition</h3>
                   <p class="portfolio-description">Дизайн</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img8.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img8.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Проект LAB</h3>
                   <p class="portfolio-description">Маркетинг</p>
                 </div>
-              </article>
+              </a>
             </li>
-            <li class="card-portfolio-item">
-              <article class="card">
-                <div class="portfolio-thumb">
-                  <img
-                    class="portfolio-list-img"
-                    src="./imajes/portfolio/img9.jpg"
-                    width="370"
-                    height="294"
-                    alt="Ноутбук"
-                  />
-                </div>
+            <li class="card portfolio-item">
+              <a class="section-link" href="">
+                <img
+                  class="portfolio-list-img"
+                  src="./imajes/portfolio/img9.jpg"
+                  width="370"
+                  height="294"
+                  alt="Ноутбук"
+                />
+
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Growing Business</h3>
                   <p class="portfolio-description">Приложение</p>
                 </div>
-              </article>
+              </a>
             </li>
           </ul>
         </div>
