изменение класса в футере

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,8 @@
     <meta name="viewport" content=", initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -21,9 +15,7 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a class="logotipe-link" href="./index.html"
-            >Web<span class="logotipe-part">Studio</span></a
-          >
+          <a class="logotipe-link" href="./index.html">Web<span class="logotipe-part">Studio</span></a>
 
           <ul class="navigation-list">
             <li class="navigation-list-item">
@@ -85,13 +77,7 @@
           <ul class="list portfolio-box">
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img1.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img1.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Технокряк</h3>
@@ -101,31 +87,17 @@
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img2.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img2.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
-                  <h3 class="portfolio-title">
-                    Постер New Orlean vs Golden Star
-                  </h3>
+                  <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                   <p class="portfolio-description">Дизайн</p>
                 </div>
               </a>
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img3.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img3.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Ресторан Seafood</h3>
@@ -135,13 +107,7 @@
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img4.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img4.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Проект Prime</h3>
@@ -151,13 +117,7 @@
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img5.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img5.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Проект Boxes</h3>
@@ -167,13 +127,7 @@
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img6.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img6.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Inspiration has no Borders</h3>
@@ -183,13 +137,7 @@
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img7.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img7.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Издание Limited Edition</h3>
@@ -199,13 +147,7 @@
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img8.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img8.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Проект LAB</h3>
@@ -215,13 +157,7 @@
             </li>
             <li class="card portfolio-item">
               <a class="section-link" href="">
-                <img
-                  class="portfolio-list-img"
-                  src="./imajes/portfolio/img9.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                />
+                <img class="portfolio-list-img" src="./imajes/portfolio/img9.jpg" width="370" height="294" alt="Ноутбук" />
 
                 <div class="items-descriptions">
                   <h3 class="portfolio-title">Growing Business</h3>
@@ -241,31 +177,20 @@
         <div class="footer-list-left-side">
           <ul class="footer-list">
             <li class="footer-item">
-              <a class="footer-logotipe-link" href="./index.html"
-                >Web<span class="logotipe-part">Studio</span></a
-              >
+              <a class="footer-logotipe-link" href="./index.html">Web<span class="logotipe-part">Studio</span></a>
             </li>
           </ul>
           <div class="address-footer">
             <address class="address">
               <ul class="footer-address-list">
-                <li class="footer-item">
-                  <a
-                    class="footer-map"
-                    href="https://g.page/stamp-capital?share"
-                    target="_blank"
-                    >г. Киев, пр-т Леси Украинки, 26</a
-                  >
+                <li class="footer-item-address">
+                  <a class="footer-map" href="https://g.page/stamp-capital?share" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li class="footer-item">
-                  <a class="footer-mailto-link" href="mailto:info@example.com"
-                    >info@example.com</a
-                  >
+                <li class="footer-item-address">
+                  <a class="footer-mailto-link" href="mailto:info@example.com">info@example.com</a>
                 </li>
-                <li class="footer-item">
-                  <a class="footer-tel-link" href="tel:+380991111111"
-                    >+38 099 111 11 11</a
-                  >
+                <li class="footer-item-address">
+                  <a class="footer-tel-link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
               </ul>
             </address>
