--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <meta name="viewport" content=", initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -21,9 +15,7 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a class="logotipe-link" href="./index.html"
-            >Web<span class="logotipe-part">Studio</span></a
-          >
+          <a class="logotipe-link" href="./index.html">Web<span class="logotipe-part">Studio</span></a>
 
           <ul class="navigation-list">
             <li class="navigation-list-item">
@@ -76,31 +68,19 @@
           <ul class="features-list">
             <li class="item icon-antenna">
               <h3 class="features-title">Внимание к деталям</h3>
-              <p class="description">
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
+              <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li class="item icon-clock">
               <h3 class="features-title">Пунктуальность</h3>
-              <p class="description">
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
+              <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li class="item icon-diagram">
               <h3 class="features-title">Планирование</h3>
-              <p class="description">
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
+              <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li class="item icon-astronaut">
               <h3 class="features-title">Современные технологии</h3>
-              <p class="description">
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
+              <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
           </ul>
         </div>
@@ -113,31 +93,13 @@
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="about-list">
             <li class="about-item">
-              <img
-                class="about-img"
-                src="./imajes/about/job1.jpg"
-                width="370"
-                height="294"
-                alt="Работает на компе"
-              />
+              <img class="about-img" src="./imajes/about/job1.jpg" width="370" height="294" alt="Работает на компе" />
             </li>
             <li class="about-item">
-              <img
-                class="about-img"
-                src="./imajes/about/job2.jpg"
-                width="370"
-                height="294"
-                alt="Работает в телефоне"
-              />
+              <img class="about-img" src="./imajes/about/job2.jpg" width="370" height="294" alt="Работает в телефоне" />
             </li>
             <li class="about-item">
-              <img
-                class="about-img"
-                src="./imajes/about/job3.jpg"
-                width="370"
-                height="294"
-                alt="Работает на планшете"
-              />
+              <img class="about-img" src="./imajes/about/job3.jpg" width="370" height="294" alt="Работает на планшете" />
             </li>
           </ul>
         </div>
@@ -150,13 +112,7 @@
           <h2 class="title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./imajes/team/worker1.jpg"
-                width="270"
-                height="260"
-                alt="Дизайнер продукта"
-              />
+              <img class="team-img" src="./imajes/team/worker1.jpg" width="270" height="260" alt="Дизайнер продукта" />
               <div class="team-list-content-wrapper">
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p class="team-description" lang="en">Product Designer</p>
@@ -195,13 +151,7 @@
             </li>
 
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./imajes/team/worker2.jpg"
-                width="270"
-                height="260"
-                alt="Разработчик"
-              />
+              <img class="team-img" src="./imajes/team/worker2.jpg" width="270" height="260" alt="Разработчик" />
               <div class="team-list-content-wrapper">
                 <h3 class="team-title">Ольга Репина</h3>
                 <p class="team-description" lang="en">Frontend Developer</p>
@@ -240,13 +190,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./imajes/team/worker3.jpg"
-                width="270"
-                height="260"
-                alt="Маркетолог"
-              />
+              <img class="team-img" src="./imajes/team/worker3.jpg" width="270" height="260" alt="Маркетолог" />
               <div class="team-list-content-wrapper">
                 <h3 class="team-title">Николай Тарасов</h3>
                 <p class="team-description" lang="en">Marketing</p>
@@ -285,13 +229,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img
-                class="team-img"
-                src="./imajes/team/worker4.jpg"
-                width="270"
-                height="260"
-                alt="UI Дизайнер"
-              />
+              <img class="team-img" src="./imajes/team/worker4.jpg" width="270" height="260" alt="UI Дизайнер" />
               <div class="team-list-content-wrapper">
                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p class="team-description" lang="en">UI Designer</p>
@@ -393,31 +331,20 @@
         <div class="footer-list-left-side">
           <ul class="footer-list">
             <li class="footer-item">
-              <a class="footer-logotipe-link" href="./index.html"
-                >Web<span class="logotipe-part">Studio</span></a
-              >
+              <a class="footer-logotipe-link" href="./index.html">Web<span class="logotipe-part">Studio</span></a>
             </li>
           </ul>
           <div class="address-footer">
             <address class="address">
               <ul class="footer-address-list">
-                <li class="footer-item">
-                  <a
-                    class="footer-map"
-                    href="https://g.page/stamp-capital?share"
-                    target="_blank"
-                    >г. Киев, пр-т Леси Украинки, 26</a
-                  >
+                <li class="footer-item-address">
+                  <a class="footer-map" href="https://g.page/stamp-capital?share" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li class="footer-item">
-                  <a class="footer-mailto-link" href="mailto:info@example.com"
-                    >info@example.com</a
-                  >
+                <li class="footer-item-address">
+                  <a class="footer-mailto-link" href="mailto:info@example.com">info@example.com</a>
                 </li>
-                <li class="footer-item">
-                  <a class="footer-tel-link" href="tel:+380991111111"
-                    >+38 099 111 11 11</a
-                  >
+                <li class="footer-item-address">
+                  <a class="footer-tel-link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
               </ul>
             </address>
