правка маржин 10 в иконках футере

--- a/index.html
+++ b/index.html
@@ -118,28 +118,28 @@
                 <p class="team-description" lang="en">Product Designer</p>
 
                 <ul class="social-list">
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-linkedin"></use>
@@ -157,14 +157,14 @@
                 <p class="team-description" lang="en">Frontend Developer</p>
 
                 <ul class="social-list">
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-twitter"></use>
@@ -172,14 +172,14 @@
                     </a>
                   </li>
 
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-linkedin"></use>
@@ -196,14 +196,14 @@
                 <p class="team-description" lang="en">Marketing</p>
 
                 <ul class="social-list">
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-twitter"></use>
@@ -211,14 +211,14 @@
                     </a>
                   </li>
 
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-linkedin"></use>
@@ -235,14 +235,14 @@
                 <p class="team-description" lang="en">UI Designer</p>
 
                 <ul class="social-list">
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-twitter"></use>
@@ -250,14 +250,14 @@
                     </a>
                   </li>
 
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item">
+                  <li class="team-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon">
                         <use href="./imajes/sprite.svg#icon-linkedin"></use>
